pgcenter (0.6.2) unstable; urgency=low
  * adjust header's styles of iostat/nicstat tabs in top utility
  * added support for pg_stat_database.checksum_failures (pg-12)
  * added support of pg_stat_progress_cluster and pg_stat_progress_create_index views
  * inject program version info from git at build time
  * fix #66, pgcenter crashes when no running postgres
  * avoid rude disconnection from postgres at top-program exit

pgcenter (0.6.1) unstable; urgency=low
  * improved aligning and query truncation
    - record: records complete length of pg_stat_statements.query (be careful, it might produce high-volume stats file)
    - record: add startup parameter for configuring truncation
    - report: can use '--truncate 0', for disabling truncation only for pg_stat_statements.query (might produce an "eyes-bleeding" output)
  * reworked pg_stat_statements queries: 
    - remove unnecessary GROUP BY, ORDER BY and aggregations
    - simplify usage of regexp_replace()
    - use pg_get_userbyid() instead of joining pg_roles view
    - use configurable limit for truncating length of queries
  * top: read remote stats only if pgcenter schema is available
  * top: do polling pg_stat_statements only if it's available (issue #59)
  * top: fixed handling of libpq errors during connection establishment (issue #58)
  * top: fix strong assembling of path to logfile (issue #55)

pgcenter (0.6.0) unstable; urgency=low
  * added goreleaser support
  * top: fix wrong handling of group cancel/terminate mask
  * implemented GoReport recommendations
  * profile: emit error if '-P' is not specified
  * config: emit error if neither '-i' nor '-u' specified
  * config: moved parameters check from main program code to command management code
  * some refactoring in connection handling code
  * add wait events profiling feature
  * lib/stat: fix wrong calculation of hits values
  * report: extend built-in help about supported statistics